4 files modified, 1 added, 4 deleted

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,5 @@
 {
   "compilerOptions": {
-    "target": "esnext",
-    "module": "commonjs",
-    "outDir": "public/js",
-    "rootDir": "src",
-    "strict": true,
-    "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true
-  },
-  "include": ["src"]
+    "target": "esnext"
+  }
 }
