--- a/package.json
+++ b/package.json
@@ -2,7 +2,5 @@
   "name": "typescript",
   "version": "0.0.0",
   "private": true,
-  "dependencies": {
-    "typescript": "^4.9.3"
-  }
+  "dependencies": {}
 }
